firerift alignment fix

--- a/searchManager/WebContent/css/default.css
+++ b/searchManager/WebContent/css/default.css
@@ -548,7 +548,7 @@ div#top-pager-text{ position:relative; top:8px; }
 div#bottom-pager-text{ position:relative; top:10px; }
 
 .clearB{ clear:both; }
-.firerift-style { float:right; }
+.firerift-style { float:left; }
 #rankingRule { margin-top:2px !important; }
 
 .label_condition { display:inline; float:none; }
